;;;; -*- coding: utf-8; fill-column: 78 -*-

changes relative to sbcl-1.3.4:
  * enhancement: the platform's strtod() is exposed as SB-POSIX:STRTOD
  * bug fix: better wording in missed optimization note. (lp#1003265)
  * bug fix: interpreted (CAS SVREF) was broken

changes in sbcl-1.3.4 relative to sbcl-1.3.3:
  * enhancement: who-sets and who-references work on DEFGLOBAL. (lp#1552997)
  * enhancement: CONSTANTP understands backquote.
    e.g. (CONSTANTP '`(0 (,CHAR-CODE-LIMIT))) => T
  * optimization: improvements to sequence functions: CONCATENATE, SUBSTITUTE,
    REVERSE.
  * bug fix: SB-EVAL does not signal an error for (THE KEYWORD :FOO)
  * bug fix: a DEFTYPE name that is redefined into a DEFSTRUCT name
    is less likely to cause confusion in the compiler.
  * bug fix: DOCUMENTATION works as intended for classes with non-standard
    metaclasses
  * bug fix: (TYPEP <extended-sequence> <extended-sequence-class>) no longer
    returns NIL in certain situations
  * bug fix: MAKE-SEQUENCE, MAP, CONCATENATE and MERGE accept class objects as
    result-type
  * bug fix: MAKE-SEQUENCE, MAP, CONCATENATE and MERGE expand DEFTYPEs in
    result-type

changes in sbcl-1.3.3 relative to sbcl-1.3.2:
  * enhancement: warn about argument mismatch for functions passed as
    arguments to other functions (e.g. REDUCE, MAP) at compile-time.
  * optimization: functions accepting other functions (e.g. REDUCE, FIND) can
    now be constant-folded if all function arguments are declared as foldable.
  * optimization: improved logical operations on integers of unknown type.
  * bug fix: exception handling no longer leaks memory on OS X. (lp#326238)

changes in sbcl-1.3.2 relative to sbcl-1.3.1:
  * enhancement: {READ,WRITE}-SEQUENCE are much faster for some combinations
    of short sequences and stream types
  * enhancement: MAKE-LIST's result can be stack-allocated on x86-64
  * bug fix: WRITE-SEQUENCE no longer fails to write lists containing integers
    to bivalent streams