@@ -2,6 +2,8 @@
 
 changes relative to sbcl-1.3.4:
   * enhancement: the platform's strtod() is exposed as SB-POSIX:STRTOD
+  * enhancement: speed up debug info creation for highly nested functions.
+    (lp#1563355)
   * bug fix: better wording in missed optimization note. (lp#1003265)
   * bug fix: interpreted (CAS SVREF) was broken
 
